syntax = "proto3";

package greet;

option go_package = "github.com/Ansh5461/Go_gRPC/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}


service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse) ;
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
    rpc LongGreet (stream GreetRequest) returns (GreetResponse);
    rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse);
}

//first for unary, second for server streaming